Update syntax sass, fix line wrapping in code blocks

--- a/sass/syntax/_solarized.scss
+++ b/sass/syntax/_solarized.scss
@@ -61,6 +61,6 @@ $link-color: lighten(#165b94, 3) !default;
 $noise-bg: image-url('noise.png') top left !default;
 
 /* fonts */
-$mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace !default;
-$arial: "Helvetica Neue", Arial, "Lucida Grande", "Lucida Sans Unicode", Lucida, sans-serif;
-
+$mono:        Monaco, Menlo, Consolas, "Courier New", monospace !default;
+$arial:       "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$serif:       Georgia, "Times New Roman", Times, serif !default;
